<resources>
    <string name="app_name">Lassie</string>
    <string name="action_settings">Instellingen</string>
    <string name="action_search">Zoeken</string>
    <string name="button_continue">Registreer</string>
    <string name="edittext_email">Vul hier uw e-mail in</string>
    <string name="edittext_gebruikersnaam">Vul hier uw gebruikersnaam in</string>
    <string name="textview_email">E-mail</string>
    <string name="textview_gebruikersnaam">Gebruikersnaam</string>
    <string name="textview_wachtwoord">Wachtwoord</string>
    <string name="textview_herhaal_wachtwoord">Herhaal wachtwoord</string>
    <string name="textview_nieuw_account">Nieuw account aanmaken</string>
    <string name="textview_login_met">Of login met \u0020 \u0020 \u0020 of</string>
    <string name="imageview_facebook">Facebook</string>
    <string name="imageview_google">Google</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_vermist">Vermist</string>
    <string name="button_gevonden">Gevonden</string>
    <string name="button_plaats_bericht">Plaats bericht</string>
    <string name="menu_open">Drawer open</string>
    <string name="menu_gesloten">Drawer close</string>
    <string name="textview_profiel">Bekijk profiel</string>
    <string name="contentdescription_logo">Logo</string>

    <!-- Menu items -->
    <string-array name="menu_items">
        <item>Home</item>
        <item>Mijn overzicht</item>
        <item>Plaats bericht vermissing</item>
        <item>Plaats bericht gevonden dier</item>
        <item>Lijst/kaart vermissingen</item>
        <item>Gebruikerspagina</item>
        <item>Notificaties</item>
        <item>Instellingen</item>
    </string-array>
</resources>
